# mttm

./: README.org  opencode.json  opencode.jsonc
agent/: data-engineer.md  doc-dev.md  haskell-dev.md  orchestrator.md  python-dev.md  reasoning-engineer.md  rust-dev.md  web-dev.md
scripts/: validate-config.bash
skills/customize-opencode/: SKILL.md
skills/data-engineering-workflow/: SKILL.md
skills/documentation-workflow/: SKILL.md
skills/documentation-workflow/templates/: API.md  CHANGELOG.md  CONTRIBUTING.md  README.md
skills/haskell-workflow/: SKILL.md
skills/haskell-workflow/templates/: cabal.project  fourmolu.yaml
skills/multi-agent/: SKILL.md
skills/nix-flake/: SKILL.md
skills/python-workflow/: SKILL.md
skills/python-workflow/templates/: pyproject.toml  ruff.toml
skills/reasoning-workflow/: SKILL.md
skills/rust-workflow/: SKILL.md
skills/rust-workflow/templates/: Cargo.toml  clippy.toml  rustfmt.toml
skills/shell-workflow/: SKILL.md
skills/shell-workflow/templates/: script.bash  script.fish
skills/web-workflow/: SKILL.md
skills/web-workflow/templates/: index.html  script.js  style.css
