[project]
name = "my_project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
