[package]
name = "my_project"
version = "0.1.0"
edition = "2024"
description = "A Rust project"

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env"] }
config = "0.15"
eyre = "0.6"
log = "0.4"
thiserror = "2"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"


# Profiles
# --------

# Dev profile
# Defaults: https://doc.rust-lang.org/cargo/reference/profiles.html#dev
# https://doc.rust-lang.org/nightly/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"
opt-level = 0

[profile.dev.package."*"]
debug = false
opt-level = 3
codegen-units = 1
 

# Debugging profile
[profile.debugging]
inherits = "dev"
debug = true


# Release profile
# Defaults: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

